--- a/.checkov.yaml
+++ b/.checkov.yaml
@@ -13,6 +13,6 @@ skip-check:
   - CKV_K8S_40 # Containers should run as a high UID to avoid host conflict
   - CKV_K8S_43 # Image should use digest
 skip-path:
-  - kubernetes/clusters
+  - kubernetes/cluster
   - kubernetes/infrastructure/longhorn/snapshot-controller
   - kubernetes/monitor/splunk-syslog/app
