--- a/ansible/Makefile
+++ b/ansible/Makefile
@@ -7,14 +7,8 @@ ansible-requirements:
 # OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES is needed when running on macos
 # https://stackoverflow.com/questions/50168647/multiprocessing-causes-python-to-crash-and-gives-an-error-may-have-been-in-progr
 
-ansible-k3s-dev: ansible-requirements
-	. ../.venv/bin/activate; export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES; ansible-playbook -i ./inventory/inventory-develop.yml k3scluster.yml --ask-pass --ask-become-pass
+ansible-k3s: ansible-requirements
+	. ../.venv/bin/activate; export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES; ansible-playbook -i ./inventory/inventory.yml k3scluster.yml --ask-pass --ask-become-pass
 
-ansible-k3s-prod: ansible-requirements
-	. ../.venv/bin/activate; export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES; ansible-playbook -i ./inventory/inventory-prod.yml k3scluster.yml --ask-pass --ask-become-pass
-
-ansible-flux-dev: ansible-requirements
-	. ../.venv/bin/activate; export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES; ansible-playbook -i ./inventory/inventory-develop.yml localhost.yml --ask-become-pass
-
-ansible-flux-prod: ansible-requirements
-	. ../.venv/bin/activate; export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES; ansible-playbook -i ./inventory/inventory-prod.yml localhost.yml --ask-become-pass
+ansible-flux: ansible-requirements
+	. ../.venv/bin/activate; export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES; ansible-playbook -i ./inventory/inventory.yml localhost.yml --ask-become-pass
