--- a/kubernetes/cluster/infrastructure.yaml
+++ b/kubernetes/cluster/infrastructure.yaml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=../../../schemas/kustomization_v1.json
+# yaml-language-server: $schema=../../schemas/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
