--- a/kubernetes/cluster/namespaces.yaml
+++ b/kubernetes/cluster/namespaces.yaml
@@ -1,13 +1,15 @@
-# yaml-language-server: $schema=../../../schemas/kustomization_v1.json
+# yaml-language-server: $schema=../../schemas/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: repositories
+  name: namespaces
   namespace: flux-system
 spec:
   interval: 1h0m0s
-  path: ./kubernetes/clusters/repositories
+  path: ./kubernetes/namespaces
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
+  timeout: 5m0s
+  wait: true
