--- a/kubernetes/cluster/networking.yaml
+++ b/kubernetes/cluster/networking.yaml
@@ -1,13 +1,14 @@
-# yaml-language-server: $schema=../../../schemas/kustomization_v1.json
+# yaml-language-server: $schema=../../schemas/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: repositories
+  name: networking
   namespace: flux-system
 spec:
-  interval: 1h0m0s
-  path: ./kubernetes/clusters/repositories
+  interval: 1h
+  path: ./kubernetes/networking
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
+  timeout: 10m
