--- a/kubernetes/cluster/repositories.yaml
+++ b/kubernetes/cluster/repositories.yaml
@@ -1,15 +1,13 @@
-# yaml-language-server: $schema=../../../schemas/kustomization_v1.json
+# yaml-language-server: $schema=../../schemas/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: namespaces
+  name: repositories
   namespace: flux-system
 spec:
   interval: 1h0m0s
-  path: ./kubernetes/namespaces
+  path: ./kubernetes/repositories
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
-  timeout: 5m0s
-  wait: true
