--- a/kubernetes/cluster/settings.yaml
+++ b/kubernetes/cluster/settings.yaml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=../../../schemas/kustomization_v1.json
+# yaml-language-server: $schema=../../schemas/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
@@ -6,7 +6,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1h0m0s
-  path: ./kubernetes/clusters/settings/develop
+  path: ./kubernetes/cluster/settings
   prune: true
   sourceRef:
     kind: GitRepository
