feat(os): ansible playbook for shutting down nodes

--- a/ansible/Makefile
+++ b/ansible/Makefile
@@ -18,3 +18,6 @@ ansible-node-patch: ansible-requirements
 
 ansible-node-reboot: ansible-requirements
 	. ../.venv/bin/activate; export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES; ansible-playbook -i ./inventory/inventory.yml os_patch.yml  --extra-vars '{"just_reboot":"true"}' --ask-pass  --ask-become-pass
+
+ansible-node-shutdown: ansible-requirements
+	. ../.venv/bin/activate; export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES; ansible-playbook -i ./inventory/inventory.yml os_shutdown.yml --ask-pass  --ask-become-pass
