fix: eaton UPS disconnect issue

--- a/ansible/roles/nut/handlers/main.yml
+++ b/ansible/roles/nut/handlers/main.yml
@@ -29,3 +29,7 @@
   ansible.builtin.shell:
     cmd: udevadm control --reload-rules && udevadm trigger
   become: true
+
+- name: Update Grub # noqa no-changed-when
+  ansible.builtin.command: update-grub
+  become: true
