--- a/requirements-dev-frozen.txt
+++ b/requirements-dev-frozen.txt
@@ -4,7 +4,7 @@ aiomultiprocess==0.9.0
 aiosignal==1.3.1
 ansible-compat==4.1.10
 ansible-core==2.15.4
-ansible-lint==6.20.0
+ansible-lint==6.20.3
 argcomplete==3.1.2
 async-timeout==4.0.3
 attrs==23.1.0
@@ -15,16 +15,16 @@ beartype==0.16.2
 beautifulsoup4==4.12.2
 black==23.9.1
 boolean.py==4.0
-boto3==1.28.53
-botocore==1.31.53
+boto3==1.28.61
+botocore==1.31.61
 bracex==2.4
 cached-property==1.5.2
 cachetools==5.3.1
 certifi==2023.7.22
-cffi==1.15.1
+cffi==1.16.0
 cfgv==3.4.0
-charset-normalizer==3.2.0
-checkov==2.4.48
+charset-normalizer==3.3.0
+checkov==2.5.6
 click==8.1.7
 click-option-group==0.5.6
 cloudsplaining==0.6.1
@@ -34,7 +34,6 @@ contextlib2==21.6.0
 cryptography==41.0.4
 cyclonedx-python-lib==3.1.5
 decorator==5.1.1
-deep-merge==0.0.4
 distlib==0.3.7
 docker==6.1.3
 dockerfile-parse==2.0.1
@@ -43,7 +42,7 @@ filelock==3.12.4
 frozenlist==1.4.0
 gitdb==4.0.10
 GitPython==3.1.37
-identify==2.5.29
+identify==2.5.30
 idna==3.4
 igraph==0.10.8
 importlib-metadata==6.8.0
@@ -64,14 +63,15 @@ multidict==6.0.4
 mypy-extensions==1.0.0
 networkx==2.6.3
 nodeenv==1.8.0
-openai==0.28.0
+numpy==1.26.0
+openai==0.28.1
 packageurl-python==0.11.2
-packaging==23.1
+packaging==23.2
 pathspec==0.11.2
 pip==23.2.1
-platformdirs==3.10.0
+platformdirs==3.11.0
 ply==3.11
-policy-sentry==0.12.9
+policy-sentry==0.12.10
 policyuniverse==1.5.1.20230817
 pre-commit==3.4.0
 pre-commit-hooks==4.4.0
@@ -87,14 +87,15 @@ python-dateutil==2.8.2
 PyYAML==6.0.1
 rdflib==7.0.0
 referencing==0.30.2
-regex==2023.8.8
+regex==2023.10.3
 requests==2.31.0
 resolvelib==1.0.1
-rich==13.5.3
-rpds-py==0.10.3
-ruamel.yaml==0.17.32
-ruamel.yaml.clib==0.2.7
-s3transfer==0.6.2
+rich==13.6.0
+rpds-py==0.10.4
+ruamel.yaml==0.17.35
+ruamel.yaml.clib==0.2.8
+rustworkx==0.13.2
+s3transfer==0.7.0
 schema==0.7.5
 semantic-version==2.10.0
 setuptools==68.0.0
@@ -106,7 +107,7 @@ spdx-tools==0.8.1
 subprocess-tee==0.4.1
 tabulate==0.9.0
 termcolor==2.3.0
-texttable==1.6.7
+texttable==1.7.0
 toml==0.10.2
 tomli==2.0.1
 tqdm==4.66.1
@@ -114,10 +115,10 @@ typing_extensions==4.8.0
 unidiff==0.7.5
 update-checker==0.18.0
 uritools==4.0.2
-urllib3==1.26.16
+urllib3==1.26.17
 virtualenv==20.24.5
 wcmatch==8.5
-wcwidth==0.2.6
+wcwidth==0.2.8
 websocket-client==1.6.3
 wheel==0.41.0
 xmltodict==0.13.0
