feat(grafana): create pushover secret for alerting

--- a/kubernetes/monitor/prometheus/app/secrets.yaml
+++ b/kubernetes/monitor/prometheus/app/secrets.yaml
@@ -27,6 +27,28 @@ spec:
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
+  name: grafana-alert-pushover
+  namespace: monitor
+spec:
+  refreshInterval: 24h
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: azure-keyvault
+  target:
+    name: grafana-alert-pushover
+    creationPolicy: Owner
+  data:
+    - secretKey: token
+      remoteRef:
+        key: pushover-app-token
+    - secretKey: userkey
+      remoteRef:
+        key: pushover-user-token
+---
+# yaml-language-server: $schema=../../../../schemas/externalsecret_v1beta1.json
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
   name: grafana-azure-auth
   namespace: monitor
 spec:
