--- a/kubernetes/monitor/mikrotik/config/config.yaml
+++ b/kubernetes/monitor/mikrotik/config/config.yaml
@@ -41,8 +41,8 @@ spec:
             interface = True                # Interfaces traffic metrics
 
             firewall = True                 # IPv4 Firewall rules traffic metrics
-            ipv6_firewall = False           # IPv6 Firewall rules traffic metrics
-            ipv6_neighbor = False           # Reachable IPv6 Neighbors
+            ipv6_firewall = True            # IPv6 Firewall rules traffic metrics
+            ipv6_neighbor = True            # Reachable IPv6 Neighbors
 
             poe = False                     # POE metrics
             monitor = True                  # Interface monitor metrics
