--- a/kubernetes/infrastructure/longhorn/snapshot-controller/setup-snapshot-controller.yaml
+++ b/kubernetes/infrastructure/longhorn/snapshot-controller/setup-snapshot-controller.yaml
@@ -33,8 +33,11 @@ spec:
       serviceAccountName: snapshot-controller
       containers:
         - name: snapshot-controller
-          image: registry.k8s.io/sig-storage/snapshot-controller:v6.1.0
+          image: registry.k8s.io/sig-storage/snapshot-controller:v6.3.1
           args:
             - "--v=5"
             - "--leader-election=true"
+            # Add a marker to the snapshot-controller manifests. This is needed to enable feature gates in CSI prow jobs.
+            # For example, in https://github.com/kubernetes-csi/csi-release-tools/pull/209, the snapshot-controller YAML is updated to add --prevent-volume-mode-conversion=true so that the feature can be enabled for certain e2e tests.
+            # end snapshot controller args
           imagePullPolicy: IfNotPresent
