--- a/kubernetes/apps/media/jellyfin/jellyfin-deployment.yaml
+++ b/kubernetes/apps/media/jellyfin/jellyfin-deployment.yaml
@@ -91,6 +91,7 @@ kind: Ingress
 metadata:
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-issuer
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
   name: jellyfin-ingress
   namespace: media
 spec:
