--- a/kubernetes/apps/media/jellyfin/jellyfin-deployment.yaml
+++ b/kubernetes/apps/media/jellyfin/jellyfin-deployment.yaml
@@ -45,7 +45,7 @@ spec:
             claimName: jellyfin-tvshows-pvc
       containers:
         - name: jellyfin
-          image: jellyfin/jellyfin:10.8.13-1-amd64
+          image: jellyfin/jellyfin:10.9.3-amd64
           ports:
             - containerPort: 8096 # http
               name: jellyfin-8096
